--- a/index.html
+++ b/index.html
@@ -113,17 +113,17 @@
   		<div class="member-container">
   			<div class="m-box">
   				<img src="img/24.png">
-  				<li><a href="C:\Users\USER\Desktop\BLOG\Sam.html">Sam Casio</a></li>
+  				<li><a href="\Sam.html">Sam Casio</a></li>
   			</div>
 
   			<div class="m-box">
   				<img src="img/25.png">
-  				<li><a href="C:\Users\USER\Desktop\BLOG\kim.html">Kim Patrick Delos Reyes</a></li>
+  				<li><a href="\kim.html">Kim Patrick Delos Reyes</a></li>
   			</div>
 
   			<div class="m-box">
   				<img src="img/26.png">
-  				<li><a href="C:\Users\USER\Desktop\BLOG\nhorgie.html">Norghie May Nachon</a></li>
+  				<li><a href="\nhorgie.html">Norghie May Nachon</a></li>
   			</div>
 
   			<div class="m-box">
@@ -132,7 +132,7 @@
 
   				<div class="m-box">
   				<img src="img/28.png">
-  				<li><a href="C:\Users\USER\Desktop\BLOG\keian.html">Keian Dale Tanaleon</a></li>
+  				<li><a href="\keian.html">Keian Dale Tanaleon</a></li>
   			</div>
   			</div>
   		</div>
@@ -141,7 +141,7 @@
   	<!-------call to action------>
   	<section class="cta">
   		<h2>WE MAKE QUALITY FUN <br> EVERYDAY</h2>
-  		<a href="C:\Users\USER\Desktop\BLOG\learn more.html" class="btn">Learn More</a>
+  		<a href="\learn more.html" class="btn">Learn More</a>
   	</section>
 	<!-------footer start------>
 	<section id="contact">
@@ -160,8 +160,8 @@
 				<div class="col">
 					<h4>Our Services</h4>
 					<ul>
-						<li><a href="C:\Users\USER\Desktop\BLOG\stem.html">How To Survie STEM</a></li>
-						<li><a href="C:\Users\USER\Desktop\BLOG\cheat.html">Cheating Sign Language</a></li>
+						<li><a href="\stem.html">How To Survie STEM</a></li>
+						<li><a href="\cheat.html">Cheating Sign Language</a></li>
 					</ul>
 				</div>
 
@@ -176,8 +176,8 @@
 				<div class="col">
 					<h4>Contact Us</h4>
 					<div class="Social">
-						<a href="C:\Users\USER\Desktop\BLOG\facebook.html"><i class='bx bxl-facebook'></i></a>
-						<a href="C:\Users\USER\Desktop\BLOG\instagram.html"><i class='bx bxl-instagram'></i></a>
+						<a href="\facebook.html"><i class='bx bxl-facebook'></i></a>
+						<a href="\instagram.html"><i class='bx bxl-instagram'></i></a>
 					</div>
 				</div>
 			</div>
