--- a/facebook.html
+++ b/facebook.html
@@ -17,8 +17,8 @@
   <body>
 
   	<header>
-  		<li><a href="C:\Users\USER\Desktop\BLOG\index.html" class="bx bxl-facebook-circle" id="logo2">WAO</a></li>
-  		<li><a href="C:\Users\USER\Desktop\BLOG\index.html" class="bx bx-arrow-back" id="back-icon"></a></li>
+  		<li><a href="\index.html" class="bx bxl-facebook-circle" id="logo2">WAO</a></li>
+  		<li><a href="\index.html" class="bx bx-arrow-back" id="back-icon"></a></li>
   	</header>
 
     <section class="members" id="members">
