--- a/instagram.html
+++ b/instagram.html
@@ -16,8 +16,8 @@
   </head>
   <body>
   	<header>
-      <li><a href="C:\Users\USER\Desktop\BLOG\index.html" class="bx bxl-instagram" id="logo">WAO</a></li>
-      <li><a href="C:\Users\USER\Desktop\BLOG\index.html" class="bx bx-arrow-back" id="back-icon"></a></li>
+      <li><a href="\index.html" class="bx bxl-instagram" id="logo">WAO</a></li>
+      <li><a href="\BLOG\index.html" class="bx bx-arrow-back" id="back-icon"></a></li>
     </header>
 
     <section class="members" id="members">
