--- a/learn more.html
+++ b/learn more.html
@@ -17,8 +17,8 @@
   <body>
 
   	<header>
-  		<li><a href="C:\Users\USER\Desktop\BLOG\index.html" class="logo">WAO</a></li>
-      <li><a href="C:\Users\USER\Desktop\BLOG\index.html" class="bx bx-arrow-back" id="back-icon"></a></li>
+  		<li><a href="\index.html" class="logo">WAO</a></li>
+      <li><a href="\index.html" class="bx bx-arrow-back" id="back-icon"></a></li>
     </header>
 
     <section class="Learn" id="Learn">
