--- a/instagram.html
+++ b/instagram.html
@@ -17,7 +17,7 @@
   <body>
   	<header>
       <li><a href="\index.html" class="bx bxl-instagram" id="logo">WAO</a></li>
-      <li><a href="\BLOG\index.html" class="bx bx-arrow-back" id="back-icon"></a></li>
+      <li><a href="\index.html" class="bx bx-arrow-back" id="back-icon"></a></li>
     </header>
 
     <section class="members" id="members">
