--- a/facebook.html
+++ b/facebook.html
@@ -24,7 +24,7 @@
     <section class="members" id="members">
       <div class="heading">
         <span>MEMBERS</span>
-        <h2>Facebook Account</h2>
+        <h2>FACEBOOK ACCOUNTS</h2>
       </div>
 
       <div class="member-container">
