--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
   			<div class="m-box">
   				<img src="img/26.png">
-  				<li><a href="\nhorgie.html">Norghie May Nachon</a></li>
+  				<li><a href="\nhorgie.html">Nhorgie May Nachon</a></li>
   			</div>
 
   			<div class="m-box">
